# post-automation

./: README.md  SPEC.md  TASKS.md  main.py  obsidian.py  pyproject.toml  requirements.txt  social_media.py  workflow.py
lib/: obsidian.py  social_media.py  utils.py  workflow.py
