[project]
name = "post-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.5",
    "google-genai>=1.33.0",
    "langchain-google-genai>=2.1.10",
    "langgraph>=0.6.7",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.1",
]
